--- a/WebContent/css/general.css
+++ b/WebContent/css/general.css
@@ -347,22 +347,16 @@ word-wrap: break-word;
 /* orange */
 .orange {
     color: rgb(255, 255, 255);
-    border: solid 1px rgb(89, 151, 49);
-    background: #80C454;
-    background: -webkit-gradient(linear, left top, left bottom, from(#80C454), to(rgb(85, 145, 47)));
-    background: -moz-linear-gradient(top, #80C454, rgb(85, 145, 47));
+    border: solid 1px rgb(108, 179, 241);
+    background: #0cc1ea;
+    background: -webkit-gradient(linear, left top, left bottom, from(#68DCEF), to(rgb(143, 215, 243)));
+    background: -moz-linear-gradient(top, #68DCEF, rgb(143, 215, 243));
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#faa51a', endColorstr='#f47a20');
 }
 .orange:hover {
-    background: rgb(0, 131, 48);
-    background: -webkit-gradient(linear, left top, left bottom, from(rgb(76, 180, 8)), to(rgb(46, 119, 2)));
-    background: -moz-linear-gradient(top, rgb(76, 180, 8), rgb(64, 148, 10));
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f88e11', endColorstr='#f06015');
-}
-.orange:hover {
-    background: rgb(0, 131, 48);
-    background: -webkit-gradient(linear, left top, left bottom, from(rgb(76, 180, 8)), to(rgb(46, 119, 2)));
-    background: -moz-linear-gradient(top, rgb(76, 180, 8), rgb(64, 148, 10));
+    background: rgb(0, 125, 131);
+    background: -webkit-gradient(linear, left top, left bottom, from(rgb(129, 236, 225)), to(rgb(77, 214, 239)));
+    background: -moz-linear-gradient(top, rgb(129, 236, 225), rgb(77, 214, 239));
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f88e11', endColorstr='#f06015');
 }
 
